--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
     --color-background: var(--background);
     --color-foreground: var(--foreground);
     --font-inter: var(--font-inter);
+    --font-newsReader: var(--font-newsReadder);
     --color-sidebar-ring: var(--sidebar-ring);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -77,6 +78,7 @@
     --sidebar-ring: oklch(0.708 0 0);
 
     --my-dark: #1e1e1e;
+    --font-newsReadder: "Newsreader", serif;
 }
 
 @layer base {
